--- a/app/src/main/res/layout/fragment_add_group.xml
+++ b/app/src/main/res/layout/fragment_add_group.xml
@@ -16,9 +16,9 @@
         <ImageView
             android:id="@+id/closeIcon"
             style="@style/iconTintColor"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_alignParentStart="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:src="@drawable/cross" />
 
         <TextView
@@ -27,6 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+
             android:text="Create a group"
 
             android:textSize="20sp"
@@ -37,6 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+
             android:text="Done"
             android:textColor="@color/teal_700"
             android:textSize="16sp"
@@ -54,6 +58,7 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:background="?android:attr/selectableItemBackground"
+            android:scaleType="centerCrop"
             android:src="@drawable/addimage" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -75,7 +80,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="?android:attr/listDivider" />
 
     <TextView
@@ -88,10 +93,11 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingHorizontal="16dp"
+        android:paddingEnd="@dimen/_7sdp"
+        android:gravity="end"
         android:paddingVertical="8dp">
 
         <TextView
