--- a/app/src/main/res/layout/item_recent_bill.xml
+++ b/app/src/main/res/layout/item_recent_bill.xml
@@ -4,6 +4,7 @@
     style="@style/backBillData"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/parent"
     android:layout_marginBottom="8dp"
     android:orientation="horizontal"
     android:padding="12dp">
