--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -204,6 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:id="@+id/addExp"
         android:text="Add expense"
         android:textColor="@color/white"
         android:layout_marginBottom="@dimen/_55sdp"
