--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -58,6 +58,9 @@
         <action
             android:id="@+id/action_groupDetailFragment_to_addMembersFragment"
             app:destination="@id/addMembersFragment" />
+        <action
+            android:id="@+id/action_groupDetailFragment_to_addGrpExpenseFragment"
+            app:destination="@id/addGrpExpenseFragment" />
     </fragment>
     <fragment
         android:id="@+id/addMembersFragment"
@@ -73,4 +76,18 @@
         android:name="com.appdev.split.AddContactFragment"
         android:label="fragment_add_contact"
         tools:layout="@layout/fragment_add_contact" />
+    <fragment
+        android:id="@+id/addGrpExpenseFragment"
+        android:name="com.appdev.split.AddGrpExpenseFragment"
+        android:label="fragment_add_grp_expense"
+        tools:layout="@layout/fragment_add_grp_expense" >
+        <action
+            android:id="@+id/action_addGrpExpenseFragment_to_splitAmountFragment"
+            app:destination="@id/splitAmountFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/splitAmountFragment"
+        android:name="com.appdev.split.SplitAmountFragment"
+        android:label="fragment_split_amount"
+        tools:layout="@layout/fragment_split_amount" />
 </navigation>
