--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,5 +10,7 @@
     <color name="chip_selected_text">@color/white</color>
     <color name="chip_unselected_text">#B0B0B0</color>
     <color name="chip_unselected_border">#404040</color>
+    <color name="tabtext">#FFFFFF</color>
+    <color name="error_red">#FF5252</color>
 
 </resources>
