--- a/app/src/main/res/layout/fragment_split_amount.xml
+++ b/app/src/main/res/layout/fragment_split_amount.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SplitAmountFragment">
+    tools:context=".UI.Fragment.SplitAmountFragment">
     <RelativeLayout
         android:layout_width="match_parent"
         android:padding="@dimen/_13sdp"
