--- a/app/src/main/res/layout/fragment_add_contact.xml
+++ b/app/src/main/res/layout/fragment_add_contact.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddContactFragment">
+    tools:context=".UI.Fragment.AddContactFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
