--- a/app/src/main/res/layout/fragment_amount_equally.xml
+++ b/app/src/main/res/layout/fragment_amount_equally.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UI.AmountEquallyFragment">
+    tools:context=".UI.Fragment.AmountEquallyFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memberRecyclerView"
