--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".GroupDetailFragment">
+    tools:context=".UI.Fragment.GroupDetailFragment">
 
     <!-- Header with Gradient -->
     <com.google.android.material.appbar.AppBarLayout
