--- a/app/src/main/res/layout/fragment_add_grp_expense.xml
+++ b/app/src/main/res/layout/fragment_add_grp_expense.xml
@@ -8,6 +8,7 @@
     android:padding="16dp"
     tools:context=".UI.Fragment.AddGrpExpenseFragment">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackground"
             android:src="@drawable/back" />
 
         <TextView
@@ -47,24 +49,78 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/friendSelect"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/titleFriends"
+            style="@style/billWordColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Friends"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:id="@+id/noFriends"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:visibility="gone">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:background="@drawable/card_border">
+
+                <TextView
+                    android:id="@+id/addFriends"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/addgroup"
+                    android:drawablePadding="@dimen/_6sdp"
+                    android:text="Add friends"
+                    android:paddingHorizontal="@dimen/_25sdp"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/selectedFrisRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/_10sdp" />
+    </LinearLayout>
+
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        app:cardBackgroundColor="@color/green_2"
-        app:cardCornerRadius="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_10sdp"
         android:id="@+id/memberSelect"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:cardBackgroundColor="@color/green_2"
+        app:cardCornerRadius="@dimen/_5sdp">
 
         <TextView
             android:layout_width="match_parent"
-            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:text="Select members to be involved"
-            android:textColor="@color/white"
             android:padding="@dimen/_10sdp"
+            android:text="Select members to be involved"
+            android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
@@ -134,7 +190,7 @@
         app:spinner_item_height="46dp"
         app:spinner_popup_animation="dropdown"
         app:spinner_popup_elevation="14dp"
-        app:spinner_popup_height="330dp"/>
+        app:spinner_popup_height="330dp" />
 
     <com.skydoves.powerspinner.PowerSpinnerView
         android:id="@+id/currencySpinner"
@@ -152,27 +208,28 @@
         app:spinner_divider_show="true"
         app:spinner_divider_size="0.4dp"
         app:spinner_item_array="@array/currencies"
-        app:spinner_popup_height="300dp"
         app:spinner_item_height="46dp"
         app:spinner_popup_animation="dropdown"
-        app:spinner_popup_elevation="14dp" />
+        app:spinner_popup_elevation="14dp"
+        app:spinner_popup_height="300dp" />
+
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        app:cardBackgroundColor="@color/green_2"
-        app:cardCornerRadius="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:id="@+id/Split"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:cardBackgroundColor="@color/green_2"
+        app:cardCornerRadius="@dimen/_5sdp">
 
         <TextView
             android:layout_width="match_parent"
-            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:text="Paid by you or split equally"
-            android:textColor="@color/white"
             android:padding="@dimen/_10sdp"
+            android:text="Paid by you or split equally"
+            android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
