--- a/app/src/main/res/drawable/ripple_circle_background.xml
+++ b/app/src/main/res/drawable/ripple_circle_background.xml
@@ -8,7 +8,7 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@android:color/white" />
+            <solid android:color="@color/chip_unselected_border" />
         </shape>
     </item>
 </ripple>
