--- a/app/src/main/res/layout/bottom_sheet_split_type.xml
+++ b/app/src/main/res/layout/bottom_sheet_split_type.xml
@@ -66,7 +66,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:padding="@dimen/_10sdp"
-            android:text="Save"
+            android:text="More Options"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp"
