--- a/app/src/main/res/layout/fragment_personal_expense.xml
+++ b/app/src/main/res/layout/fragment_personal_expense.xml
@@ -183,7 +183,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
-               android:id="@+id/closeButton"
+               android:id="@+id/calender"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
